fix comments and bug on mobile for overlapping stars

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@
 }
 
 .barnes-and-noble {
-  width:126px;
+  width: 126px;
   background-image: url("data:image/svg+xml,%3Csvg width='246' height='22' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='%23575555' d='M152.918 2.42h3.524l8.139 10.695V2.42h3.772v17.37h-3.251L156.69 8.747V19.79h-3.772zM.143 2.41h8.064c1.985 0 3.549.546 4.541 1.539.794.794 1.192 1.762 1.192 2.952v.05c0 1.96-1.043 3.052-2.284 3.747 2.01.77 3.251 1.936 3.251 4.268v.05c0 3.176-2.58 4.764-6.5 4.764H.142V2.41zm10 5.136c0-1.14-.893-1.786-2.506-1.786H3.865v3.673h3.524c1.687 0 2.754-.546 2.754-1.836v-.05zM8.282 12.61H3.865v3.821h4.541c1.687 0 2.705-.595 2.705-1.886v-.05c0-1.165-.87-1.885-2.83-1.885zM24.939 2.286h3.523l7.445 17.494h-3.995l-1.588-3.896h-7.345L21.39 19.78h-3.896L24.94 2.286zm4.02 10.224L26.65 6.877l-2.307 5.633h4.615zM40.193 2.41h7.94c2.209 0 3.921.62 5.063 1.762.967.968 1.488 2.333 1.488 3.97v.05c0 2.804-1.514 4.566-3.722 5.385l4.243 6.203H50.74l-3.722-5.558h-3.003v5.558h-3.821V2.41zm7.693 8.437c1.86 0 2.927-.992 2.927-2.456v-.05c0-1.638-1.142-2.481-3.002-2.481h-3.797v4.987h3.872zM60.5 2.325h3.524l8.139 10.694V2.325h3.771v17.37h-3.25L64.272 8.652v11.043H60.5zM82.102 2.41h13.102v3.4h-9.306v3.524h8.19v3.4h-8.19v3.647h9.43v3.4H82.102zM99.972 17.25l2.258-2.706c1.563 1.29 3.2 2.11 5.186 2.11 1.564 0 2.506-.62 2.506-1.638v-.05c0-.967-.595-1.464-3.498-2.208-3.5-.894-5.758-1.861-5.758-5.31v-.05c0-3.152 2.531-5.236 6.08-5.236 2.53 0 4.69.794 6.452 2.208l-1.985 2.879c-1.539-1.067-3.053-1.712-4.517-1.712-1.464 0-2.233.67-2.233 1.513v.05c0 1.141.744 1.514 3.747 2.283 3.524.919 5.509 2.184 5.509 5.21v.05c0 3.45-2.63 5.385-6.378 5.385-2.63 0-5.285-.918-7.37-2.779M173.015 11.155v-.05c0-4.938 3.896-8.983 9.256-8.983s9.206 3.995 9.206 8.933v.05c0 4.938-3.896 8.983-9.256 8.983s-9.206-3.995-9.206-8.933m14.467 0v-.05c0-2.978-2.184-5.459-5.261-5.459s-5.21 2.432-5.21 5.41v.05c0 2.977 2.183 5.458 5.26 5.458s5.211-2.432 5.211-5.41M195.89 2.42h8.064c1.985 0 3.548.546 4.541 1.538.794.794 1.191 1.763 1.191 2.953v.05c0 1.96-1.042 3.052-2.283 3.747 2.01.769 3.25 1.936 3.25 4.268v.05c0 3.176-2.58 4.764-6.5 4.764h-8.264V2.42zm10 5.136c0-1.14-.894-1.786-2.506-1.786h-3.772v3.673h3.523c1.687 0 2.754-.547 2.754-1.837v-.05zm-1.862 5.063h-4.416v3.821h4.54c1.688 0 2.705-.595 2.705-1.886v-.05c0-1.166-.868-1.885-2.829-1.885zM216.207 2.42h3.822v13.896h8.66v3.474h-12.482zM232.59 2.42h13.101v3.4h-9.305v3.523h8.189v3.4h-8.189v3.647h9.43v3.4H232.59z'/%3E%3Cpath d='M131.133 1.935c-.384 0-.752.094-1.062.272-.748.429-1.18 1.382-1.076 2.372.165 1.577.996 2.78 2.202 4.076 1.469-1.181 2.167-2.45 2.192-3.98.017-1.018-.286-1.766-.924-2.29a2.102 2.102 0 00-1.332-.45zm-1.525 9.431c-1.166 1.084-1.831 2.556-1.831 4.15 0 1.295.371 2.335 1.104 3.09.73.752 1.77 1.133 3.086 1.133 1.212 0 2.433-.456 3.455-1.266l-5.814-7.107zm7.256 8.373c-1.646 1.22-3.543 1.926-5.55 1.926-1.938 0-3.595-.508-4.925-1.51-1.347-1.013-2.03-2.405-2.03-4.139 0-2.282 1.351-4.312 3.955-5.817-.935-1.183-1.58-2.028-1.855-2.734a6.341 6.341 0 01-.436-2.306c0-1.454.532-2.636 1.58-3.514 1.039-.87 2.344-1.31 3.88-1.31 1.356 0 2.514.375 3.444 1.116.871.694 1.313 1.766 1.313 3.185 0 2.056-1.319 3.735-4.03 5.13l5.567 6.47c.509-1.056.8-2.27.8-3.588 0-.59.014-1.016-.04-1.373-.025-.175-.043-.243-.11-.321-.051-.06-.249-.167-.39-.198l-1.863-.439-.038-.914.206.01a83.912 83.912 0 003.168.057c.47 0 .91-.004 1.32-.014.41-.01.798-.024 1.166-.044l.206-.015.054.912-1.868.565c-.106.028-.13.167-.12.231.057.514.085.896.085 1.322 0 2.019-.463 3.788-1.376 5.262.57.833 1.094 1.453 1.558 1.845.468.395 1.026.61 1.65.625.174.005.329-.006.772-.087l.185-.042.158.911-.12.066a5.386 5.386 0 01-2.615.658c-1.46 0-2.664-.667-3.701-1.926z' fill='%23C39F43'/%3E%3C/g%3E%3C/svg%3E");
 }
 
@@ -50,6 +50,8 @@ $primary-color: #345673;
 $secondary-color: #fcfcfc;
 $shadow-color-dark: #01060f;
 $shadow-color-light: #666;
+$color-white: #fff;
+$color-off-white: #f9f9f9;
 
 
 h1 {
@@ -79,7 +81,11 @@ h2 {
 }
 
 .review-section {
-  padding: 50px;
+  padding: 20px;
+
+  @include tablet {
+    padding: 50px;
+  }
 
   .review-form {
     text-align: center;
@@ -178,15 +184,16 @@ h2 {
       height: 298px;
       transform: translateX(184px) rotateY(90deg);
       background: linear-gradient(90deg,
-              #fff 0%,
-              #f9f9f9 5%,
-              #fff 10%,
-              #f9f9f9 15%,
-              #f9f9f9 55%,
-              #fff 60%,
-              #f9f9f9 65%,
-              #f9f9f9 95%,
-              #fff 100%
+              $color-white 0%,
+              $color-off-white 5%,
+              $color-white 10%,
+              $color-off-white 15%,
+              $color-white 35%,
+              $color-off-white 55%,
+              $color-white 60%,
+              $color-off-white 65%,
+              $color-white 95%,
+              $color-off-white 100%
       );
 
       @include tablet {
